# node-zk-accelerate

./: .eslintrc.json  .gitignore  .npmignore  .prebuildrc  .prettierignore  LICENSE  README.md  binding.gyp  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: benchmarking.md  hardware-utilization.md  snarkjs-integration.md
native-rust/: Cargo.toml  build.rs  package.json
native-rust/src/: lib.rs
native/compiled-shaders/: msm.metallib  ntt.metallib  zk_accelerate.metallib
native/include/: cpu_accelerate.h  metal_gpu.h  zk_accelerate.h
native/shaders/: msm.air  msm.metal  ntt.metal
native/src/: addon.cc  blas_ops.cc  field_ops.cc  hardware_detect.cc  metal_compute.mm  metal_gpu.mm  metal_msm.mm  metal_ntt.mm  neon_montgomery.cc  sme_ops.cc  vdsp_ops.cc
prebuilds/darwin-arm64/: manifest.json
scripts/: build.js  compile-metal.sh  create-prebuilds.js  postinstall.js
src/: acceleration-checkpoint.test.ts  api.ts  async.ts  errors.ts  hardware.test.ts  hardware.ts  index.ts  native.ts  types.ts  validation.prop.test.ts  validation.ts
src/arkworks/: arkworks-serialization.prop.test.ts  index.ts  serialization.ts
src/benchmark/: baseline.ts  benchmark.test.ts  cli.ts  hardware-report.ts  index.ts  quick.ts  runner.ts  types.ts
src/cpu-accelerate/: blas.ts  cpu-accelerate.test.ts  index.ts  neon.ts  sme.ts  status.ts  vdsp.ts
src/curve/: compression.prop.test.ts  compression.ts  config.ts  coordinate-representation.prop.test.ts  curve-group.prop.test.ts  (+4 more)
(+58 files in other folders)
