[package]
name = "zk-accelerate-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust native components for node-zk-accelerate"
authors = ["Digital Defiance"]
repository = "https://github.com/digitaldefiance/node-zk-accelerate"

[lib]
crate-type = ["cdylib"]
name = "zk_accelerate_rs"

[dependencies]
napi = { version = "2", features = ["napi8", "async", "serde-json"] }
napi-derive = "2"

# Cross-platform utilities
num_cpus = "1.16"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[target.'cfg(target_os = "macos")'.dependencies]
# Apple-specific dependencies
core-foundation = "0.9"
metal = "0.28"

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64-specific optimizations can be added here

[features]
default = []
# Enable experimental SME support (M4+)
sme = []
# Enable Metal GPU acceleration
metal = []
# Enable all Apple Silicon optimizations
apple-silicon = ["metal"]
